<resources>
    <!-- Название программы -->
    <string name="app_name">DASTAN_ANKETA</string>

    <!-- Текстовые константы -->
    <string name="Мужчина">Мужчина</string>
    <string name="Женщина">Женщина</string>
    <string name="Кто_Вы">Кто Вы?</string>
    <string name="Введите_ФИО">введите сюда свое ФИО</string>
    <string name="Сдал_IELTS_выше_6">Сдали ли вы IELTS выше чем на 6 баллов:</string>
    <string name="Да">Да</string>
    <string name="Ваш_пол">Ваш пол:</string>
    <string name="Ваша_специальность">Ваша специальность:</string>
    <string name="ИТОГО">ИТОГО</string>
    <string name="мужской">мужской</string>
    <string name="женский">женский</string>
    <string name="Сводные_данные">Сводные данные:</string>
    <string name="Назад">Назад</string>
    <string name="Выход">Выход</string>
    <string name="Вы">Вы:</string>
    <string name="Ваше_образование">Образование:</string>
    <string name="Специальность">Специальность:</string>

    <!-- Массив строк -->
    <string-array name="country_arrays">
        <item>Математика</item>
        <item>Химия</item>
        <item>Физика</item>
        <item>География</item>
        <item>Английский язык</item>
    </string-array>

</resources>
